# earthdataDownloader

./: README.md  environment.yml  pyproject.toml  search.json
earthdataDownloader/: main.py
